<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_i_am_here"
            android:title="@string/title_activity_main" />
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/nav_map"
            android:title="@string/title_activity_maps" />
        <item
            android:id="@+id/nav_meteo"
            android:icon="@drawable/nav_meteo"
            android:title="@string/title_activity_meteo" />
        <item
            android:id="@+id/nav_luoghi_memorabili"
            android:icon="@drawable/nav_luoghi_salvati"
            android:title="@string/title_activity_luoghi_memorabili" />
        <item
            android:id="@+id/nav_luoghi_interesse"
            android:icon="@drawable/nav_luoghi_interesse"
            android:title="@string/title_activity_google_places" />
        <item
            android:id="@+id/nav_note"
            android:icon="@drawable/nav_appunti"
            android:title="@string/title_activity_note" />
    </group>

    <item android:title="Utility">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/nav_share"
                android:title="@string/action_share" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/nav_settings"
                android:title="@string/title_activity_settings" />
            <item
                android:id="@+id/nav_database"
                android:icon="@drawable/nav_database"
                android:title="Database Utility" />
        </menu>
    </item>

</menu>
